# CHASM_NuSpacesim

./: .gitignore  Attenuation Demo.ipynb  CHASM Demo.ipynb  CORSIKA comparison demo.ipynb  README.md  Y_lX_array.npz  atmosphere.py  axis.py  charged_particle.py  charged_particle_ABC.py  cherenkov_photon.py  cherenkov_photon_array.py  counters.py  generate_Cherenkov.py  n_t_lX_of_t_lX.npz  pyproject.toml  setup.cfg  setup.py  shower.py  simulation.py  timing.py  y_t_delta.npz  y_t_delta_lX_-3_to_-2.npz  y_t_delta_lX_-4_to_-3.npz  y_t_delta_lX_-6_to_-5.npz  yield_table.py
CHASM/: Custom_Distribution_Example.ipynb  cherenkov_photon.py  cherenkov_photon_array.py  chpy.yml  generate_Cherenkov.py  shower.py  yield_table.py
CHASM/data/: y_t_delta_lX_-2_to_-1.npz  y_t_delta_lX_-5_to_-4.npz
demo/: Attenuation Demo.ipynb  CHASM Demo.ipynb  CORSIKA comparison demo.ipynb  Custom_Distribution_Example.ipynb  easchersim.npz  write_eventio_format.ipynb
demo/.ipynb_checkpoints/: Attenuation Demo-checkpoint.ipynb  CHASM Demo-checkpoint.ipynb  CORSIKA comparison demo-checkpoint.ipynb  write_eventio_format-checkpoint.ipynb
src/CHASM/: __init__.py  atmosphere.py  axis.py  block_data.py  charged_particle.py  charged_particle_ABC.py  cherenkov_photon_array.py  comp_tests.py  config.py  counter_array.py  eventio_types.py  generate_Cherenkov.py  import_corsika.py  shower.py  simulation.py  user_inputs.py  write_eventio.py
src/CHASM/data/: n_t_lX_of_t_lX.npz
src/chasm_ikepc1/: simulation.py
src/easchasm/: axis.py  charged_particle.py  cherenkov_yield.py
src/easchasm/data/: abstable.npz
tests/: conftest.py  otl_tests.py  prof.py  test.npz  test_signals.py  upward_tests.py
