[options]
packages = find:
install_requires =
    eventio
    h5py
    ipympl
    jupyter
    matplotlib
    numpy>=1.21
    scipy
python_requires = >=3.10
ext_package = CHASM
package_dir =
    = src
zip_safe = True

[options.packages.find]
where = src

[options.package_data]
src.CHASM.data = *.npz

[bdist_wheel]
universal = 1
