[options]
packages = find:
install_requires =
    h5py
    ipympl
    jupyter
    matplotlib
    numpy>=1.21
    scipy
python_requires = >=3.9
ext_package = CHASM
package_dir =
    = src
zip_safe = True

[options.packages.find]
where = src
include = CHASM

[options.package_data]
CHASM.data =
    abstable.npz
    gg_t_delta_theta_2020_normalized.npz
    gg_t_delta_theta_doubled.npz
    gg_t_delta_theta_lX_-2_to_-1.npz
    gg_t_delta_theta_lX_-3_to_-2.npz
    gg_t_delta_theta_lX_-4_to_-3.npz
    gg_t_delta_theta_lX_-5_to_-4.npz
    gg_t_delta_theta_lX_-6_to_-5.npz
    gg_t_delta_theta_mc.npz
    n_t_lX_of_t_lX.npz
    sample_corsika_data.npz
    Y_lX_array.npz
    y_t_delta_lX_-2_to_-1.npz
    y_t_delta_lX_-3_to_-2.npz
    y_t_delta_lX_-4_to_-3.npz
    y_t_delta_lX_-5_to_-4.npz
    y_t_delta_lX_-6_to_-5.npz
    y_t_delta.npz

[bdist_wheel]
universal = 1
